[package]
name = "github-most-popular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
itertools = "0.8.0"
clap = "2.19.0"
toml = "0.5.9"
colored = "2.0.0"
